--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "clean-webpack-plugin": "^2.0.0",
     "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
     "file-loader": "^5.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "prettier": "^2.0.5",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
