--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.15"
+  },
   "devDependencies": {
     "clean-webpack-plugin": "^2.0.0",
     "css-loader": "^3.5.3",
